--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 		<stack.version>1.0.0</stack.version>
 		<central.publishing.plugin.version>0.9.0</central.publishing.plugin.version>
 		<jacoco.version>0.8.14</jacoco.version>
+		<maven.enforcer.plugin.version>3.5.0</maven.enforcer.plugin.version>
 	</properties>
 
 	<repositories>
@@ -157,4 +158,37 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-enforcer-plugin</artifactId>
+						<version>${maven.enforcer.plugin.version}</version>
+						<executions>
+							<execution>
+								<id>enforce-no-snapshots</id>
+								<goals>
+									<goal>enforce</goal>
+								</goals>
+								<configuration>
+									<rules>
+										<requireReleaseVersion>
+											<message>Release builds require a non-SNAPSHOT project version.</message>
+										</requireReleaseVersion>
+										<requireReleaseDeps>
+											<message>Release builds require non-SNAPSHOT dependencies.</message>
+										</requireReleaseDeps>
+									</rules>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
