--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
 	<modules>
 		<module>opinion-catalog-common</module>
+		<module>opinion-catalog-service-package</module>
 		<module>opinion-catalog</module>
 		<module>coverage-report</module>
 	</modules>
